--- a/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
+++ b/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,27 +13,23 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Auth_Firebase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ry-Kg-PTV" userLabel="secondView">
-                                <rect key="frame" x="39.333333333333343" y="238" width="349.66666666666663" height="450"/>
+                                <rect key="frame" x="17" y="197" width="356.33333333333331" height="450"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="muX-OI-J2G" userLabel="main Stack View">
-                                        <rect key="frame" x="10" y="10" width="329.66666666666669" height="430"/>
+                                        <rect key="frame" x="20" y="20" width="316.33333333333331" height="410"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="6w1-da-hh4">
-                                                <rect key="frame" x="0.0" y="0.0" width="329.66666666666669" height="51"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="47.666666666666664"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tVa-gR-Dfn">
-                                                <rect key="frame" x="0.0" y="76" width="329.66666666666669" height="50.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="72.666666666666686" width="316.33333333333331" height="47.333333333333343"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="envelope.badge.shield.half.filled" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Al7-IS-mpW">
-                                                        <rect key="frame" x="0.0" y="2" width="23.666666666666668" height="48.666666666666664"/>
-                                                        <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите логин или Email" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ewj-NB-I3y">
-                                                        <rect key="frame" x="27.666666666666657" y="0.0" width="302" height="50.666666666666664"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="47.333333333333336"/>
                                                         <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <color key="textColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -42,14 +38,10 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="D3g-4w-y4M">
-                                                <rect key="frame" x="0.0" y="151.66666666666669" width="329.66666666666669" height="51"/>
+                                                <rect key="frame" x="0.0" y="145" width="316.33333333333331" height="47.666666666666657"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Cyy-Eh-d33">
-                                                        <rect key="frame" x="0.0" y="1" width="18" height="49"/>
-                                                        <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Введите пароль" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="A5o-3t-XeI">
-                                                        <rect key="frame" x="27" y="0.0" width="302.66666666666669" height="51"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="47.666666666666664"/>
                                                         <color key="textColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
@@ -57,7 +49,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SZL-lh-xAR">
-                                                <rect key="frame" x="0.0" y="227.66666666666669" width="329.66666666666669" height="50.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="217.66666666666669" width="316.33333333333331" height="47.333333333333314"/>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="22"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                 <state key="normal" title="Продолжить">
@@ -70,20 +62,20 @@
                                                 </buttonConfiguration>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Или используйте другой способ:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="5Fk-y6-5ZU">
-                                                <rect key="frame" x="0.0" y="303.33333333333337" width="329.66666666666669" height="51"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                <rect key="frame" x="0.0" y="290" width="316.33333333333331" height="47.666666666666686"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                                 <color key="textColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="m1P-lr-fI4">
-                                                <rect key="frame" x="0.0" y="379.33333333333337" width="329.66666666666669" height="50.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="362.66666666666663" width="316.33333333333331" height="47.333333333333314"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="faceid" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bav-5x-Xed">
-                                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="159.66666666666666" height="48.666666666666664"/>
+                                                        <rect key="frame" x="0.0" y="1.3333333333333321" width="153" height="45.333333333333336"/>
                                                         <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </imageView>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="tja-Lw-91Y">
-                                                        <rect key="frame" x="169.66666666666666" y="0.0" width="159.99999999999997" height="50.666666666666664"/>
+                                                        <rect key="frame" x="163" y="0.0" width="153.33333333333337" height="47.333333333333336"/>
                                                         <color key="tintColor" red="0.83677323609999998" green="0.99755543469999997" blue="0.16165398049999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     </imageView>
                                                 </subviews>
@@ -95,10 +87,10 @@
                                 <color key="tintColor" systemColor="placeholderTextColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="450" id="8me-eL-oOc"/>
-                                    <constraint firstAttribute="bottom" secondItem="muX-OI-J2G" secondAttribute="bottom" constant="10" id="G9X-o5-2QB"/>
-                                    <constraint firstItem="muX-OI-J2G" firstAttribute="leading" secondItem="0ry-Kg-PTV" secondAttribute="leading" constant="10" id="LMG-y0-vA0"/>
-                                    <constraint firstAttribute="trailing" secondItem="muX-OI-J2G" secondAttribute="trailing" constant="10" id="Z5F-2P-fle"/>
-                                    <constraint firstItem="muX-OI-J2G" firstAttribute="top" secondItem="0ry-Kg-PTV" secondAttribute="top" constant="10" id="zOE-ka-dlz"/>
+                                    <constraint firstAttribute="bottom" secondItem="muX-OI-J2G" secondAttribute="bottom" constant="20" id="G9X-o5-2QB"/>
+                                    <constraint firstItem="muX-OI-J2G" firstAttribute="leading" secondItem="0ry-Kg-PTV" secondAttribute="leading" constant="20" id="LMG-y0-vA0"/>
+                                    <constraint firstAttribute="trailing" secondItem="muX-OI-J2G" secondAttribute="trailing" constant="20" id="Z5F-2P-fle"/>
+                                    <constraint firstItem="muX-OI-J2G" firstAttribute="top" secondItem="0ry-Kg-PTV" secondAttribute="top" constant="20" id="zOE-ka-dlz"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -116,6 +108,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="loginField" destination="Ewj-NB-I3y" id="geo-Yt-fju"/>
                         <outlet property="passwordField" destination="A5o-3t-XeI" id="e6M-4n-JVt"/>
                     </connections>
                 </viewController>
@@ -125,9 +118,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="envelope.badge.shield.half.filled" catalog="system" width="128" height="100"/>
         <image name="faceid" catalog="system" width="128" height="115"/>
-        <image name="lock" catalog="system" width="128" height="128"/>
         <image name="logo" width="103.19999694824219" height="17.040000915527344"/>
         <image name="logoGoogle" width="24" height="24"/>
         <systemColor name="placeholderTextColor">
