--- a/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
+++ b/Auth-Firebase/Auth-Firebase/Base.lproj/Main.storyboard
@@ -75,18 +75,20 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="m1P-lr-fI4">
                                                 <rect key="frame" x="0.0" y="362.66666666666663" width="316.33333333333331" height="47.333333333333314"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mrg-Vj-tof">
+                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mrg-Vj-tof">
                                                         <rect key="frame" x="0.0" y="0.0" width="153" height="47.333333333333336"/>
                                                         <color key="tintColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                        <state key="normal" title="Button">
-                                                            <imageReference key="backgroundImage" image="faceid" catalog="system" symbolScale="default"/>
+                                                        <state key="normal">
+                                                            <imageReference key="backgroundImage" image="faceid" catalog="system" symbolScale="medium"/>
                                                         </state>
+                                                        <state key="selected" backgroundImage="touchid" catalog="system"/>
                                                         <buttonConfiguration key="configuration" style="plain">
-                                                            <backgroundConfiguration key="background" imageContentMode="scaleAspectFit">
-                                                                <imageReference key="image" image="faceid" catalog="system" symbolScale="large"/>
-                                                            </backgroundConfiguration>
+                                                            <backgroundConfiguration key="background"/>
                                                         </buttonConfiguration>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                                                        </userDefinedRuntimeAttributes>
                                                         <connections>
                                                             <action selector="pressedBtnBiometry:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mg0-FT-kNd"/>
                                                         </connections>
@@ -162,6 +164,7 @@
         <image name="faceid" catalog="system" width="128" height="115"/>
         <image name="logo" width="103.19999694824219" height="17.040000915527344"/>
         <image name="logoGoogle" width="24" height="24"/>
+        <image name="touchid" catalog="system" width="128" height="122"/>
         <systemColor name="placeholderTextColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
